--- a/src/main/webapps/WEB-INF/web.xml
+++ b/src/main/webapps/WEB-INF/web.xml
@@ -12,21 +12,21 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring.xml</param-value>
+		<param-value>/WEB-INF/config/spring.xml</param-value>
 	</context-param>
-	
+
 	<servlet>
 		<servlet-name>robot</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/springmvc.xml</param-value>
+			<param-value>/WEB-INF/config/springmvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -44,6 +44,19 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>Set Character Encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>openSession</filter-name>
+		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+		<init-param>
+			<param-name>singleSession</param-name>
+			<param-value>false</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>openSession</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
