--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,17 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+	<dependency>
+   <groupId>org.springframework</groupId>
+   <artifactId>spring-messaging</artifactId>
+   <version>${spring.version}</version>
+</dependency>
+	
 		<!-- Hadoop -->
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
