--- a/pom.xml
+++ b/pom.xml
@@ -173,5 +173,10 @@
 			<version>1.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>2.3.0-M01</version>
+		</dependency>
 	</dependencies>
 </project>
