--- a/pom.xml
+++ b/pom.xml
@@ -178,5 +178,13 @@
 			<artifactId>neo4j</artifactId>
 			<version>2.3.0-M01</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
