--- a/src/main/java/config.properties
+++ b/src/main/java/config.properties
@@ -1,4 +1,4 @@
 expertPageSize=10
-expertFilePath=
-paperFilePath=
-patentFilePath=
+expertFilePath=/home/sloriac/data
+paperFilePath=/home/sloriac/data
+patentFilePath=/home/sloriac/data
