修改了知识图谱的展示

--- a/src/main/webapps/WEB-INF/config/config.properties
+++ b/src/main/webapps/WEB-INF/config/config.properties
@@ -1,1 +1,6 @@
 expertPageSize=10
+expertFilePath=/home/innerac/Documents/data
+paperFilePath=/home/innerac/Documents/data
+patentFilePath=/home/innerac/Documents/data
+neoDataPath=/home/innerac/workspace/neoDB
+dbPath=/home/innerac/neoOut
