--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,13 @@
 			<artifactId>solr-solrj</artifactId>
 			<version>5.1.0</version>
 		</dependency>
-
+		
+<dependency>
+  <groupId>com.huaban</groupId>
+  <artifactId>jieba-analysis</artifactId>
+  <version>1.0.0</version>
+</dependency>
+    
 
 	</dependencies>
 </project>
