--- a/src/main/webapps/WEB-INF/web.xml
+++ b/src/main/webapps/WEB-INF/web.xml
@@ -34,16 +34,22 @@
 		<servlet-name>robot</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<filter>
-		<filter-name>Set Character Encoding</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>characterEncoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-	</filter>
+<filter>
+<filter-name>encodingFilter </filter-name>
+<filter-class>
+org.springframework.web.filter.CharacterEncodingFilter
+</filter-class>
+<init-param>
+<param-name>encoding </param-name>
+<param-value>UTF-8 </param-value>
+</init-param>
+<init-param>
+<param-name>forceEncoding </param-name>
+<param-value>true </param-value>
+</init-param>
+</filter>
 	<filter-mapping>
-		<filter-name>Set Character Encoding</filter-name>
+		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
